img icon adicionada e html e css pagina vencedor criada

--- a/gameover.html
+++ b/gameover.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roubo no Museu</title>
-    <link rel="stylesheet" href="gameover_venceu.css">
+    <link rel="stylesheet" href="gameover.css">
 </head>
 <body>
     <div class="div-principal">
