--- a/vocevenceu.html
+++ b/vocevenceu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roubo no Museu</title>
-    <link rel="stylesheet" href="gameover_venceu.css">
+    <link rel="stylesheet" href="vocevenceu.css">
 </head>
 <body>
     <div class="div-principal">
@@ -15,7 +15,7 @@
 
         <div class="div-container">
             <div class="div-h1">
-                <h1 class="h1-gameover">VOCÊ GANHOU!!!</h1>
+                <h1 class="h1-venceu">VOCÊ GANHOU!!!</h1>
             </div>
 
             <div class="div-descricao">
@@ -23,7 +23,7 @@
             </div>
 
             <div class="div-icon">
-                <img src="./img/vector-gameover.png" class="img-gameover"alt=" Imagem Game Over">
+                <img src="./img/icon-medalha.png" class="img-medalha"alt=" Imagem Medalha">
             </div>
 
             <div class="div-botao">
