htmls de game over adcionado e mudanças de descrição

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
 
         <div class="escolha-personagem">
-            <p class="escolha">Escolha um investigador para jogar</p>
+            <p class="escolha">Escolha um personagem para jogar</p>
         </div>
 
         <div class="principal">
@@ -40,7 +40,7 @@
     </main>
 
     <footer>
-        <p class="p-footer">Criado por Rafaela Dias para fins didáticos</p>
+        <p class="p-footer">Criado por Rafaela Dias para fins didáticos - Resilia 2021</p>
     </footer>
     
 </body>
