--- a/paula.html
+++ b/paula.html
@@ -10,7 +10,7 @@
 <body>
     <div class="div-principal">
         <div class="div-h1">
-            <h1>Mistério do Roubo no Museu</h1>
+            <h1>Roubo no Museu</h1>
         </div>
 
         <div class="div-container">
@@ -20,10 +20,15 @@
             </div>
             
             <div class="div-texto">
-                <p>Já era tarde e Armando estava quase indo embora, mas recebeu um chamado urgente que precisava de sua atenção, o museu Imperial havia sido roubado, e uma peça muito importante que estaria em esposição no dia seguinte foi o item levado pelo assaltante, chegando na cena do crime embaixo de uma forte chuva Armando não podia perder tempo e tinha que analisar as pistas...</p>
+                <p>
+                    Paula é  uma criminosa muito perspicaz, conhecida por roubar objetos muito valiosos.<br>
+                    Está sendo procurada pela polícia há um bom tempo, mas sempre dá um jeito de escapar.
+
+
+                </p>
             </div>
             <div class="div-botao">
-                <button class="botao">Investigar</button>
+                <button class="botao">Começar</button>
             </div>
         </div>
     </div>
