--- a/armando.html
+++ b/armando.html
@@ -10,7 +10,7 @@
 <body>
     <div class="div-principal">
         <div class="div-h1">
-            <h1>Mistério do Roubo no Museu</h1>
+            <h1>Roubo no Museu</h1>
         </div>
 
         <div class="div-container">
@@ -20,7 +20,12 @@
             </div>
             
             <div class="div-texto">
-                <p>Já era tarde e Armando estava quase indo embora, mas recebeu um chamado urgente que precisava de sua atenção, o museu Imperial havia sido roubado, e uma peça muito importante que estaria em esposição no dia seguinte foi o item levado pelo assaltante, chegando na cena do crime embaixo de uma forte chuva Armando não podia perder tempo e tinha que analisar as pistas...</p>
+                <p>
+                    Armando é o chefe de investigação do Departamento de Polícia da cidade de Corinna.<br>
+                    Enquanto estava no caminho para sua casa, o celular tocou para um novo chamado, uma das obras mais valiosas do Museu de Honor havia sido roubada.
+                    Armando rapidamente desviou o caminho e foi para o local do crime.
+
+                </p>
             </div>
             <div class="div-botao">
                 <button class="botao">Investigar</button>
