Algumas pastas javascript adicionadas

--- a/armando.html
+++ b/armando.html
@@ -28,7 +28,7 @@
                 </p>
             </div>
             <div class="div-botao">
-                <button class="botao">Investigar</button>
+                <a href="fase1armando.html" target="_blank"><button class="botao">Investigar</button></a>
             </div>
         </div>
     </div>
