--- a/denis.html
+++ b/denis.html
@@ -10,7 +10,7 @@
 <body>
     <div class="div-principal">
         <div class="div-h1">
-            <h1>Mistério do Roubo no Museu</h1>
+            <h1>Roubo no Museu</h1>
         </div>
 
         <div class="div-container">
@@ -20,10 +20,11 @@
             </div>
             
             <div class="div-texto">
-                <p>Já era tarde e Armando estava quase indo embora, mas recebeu um chamado urgente que precisava de sua atenção, o museu Imperial havia sido roubado, e uma peça muito importante que estaria em esposição no dia seguinte foi o item levado pelo assaltante, chegando na cena do crime embaixo de uma forte chuva Armando não podia perder tempo e tinha que analisar as pistas...</p>
+                <p>  Denis é um policial muito renomado e empenhado em seu trabalho, está sempre ligado a todos os crimes que acontecem na cidade de Corinna. <br> Seu chefe ligou informando que uma das peças mais valiosas do Museu de Honor havia sido roubada e Denis imediatamente se direcionou para o local.
+                </p>
             </div>
             <div class="div-botao">
-                <button class="botao">Investigar</button>
+                <a href="fase1denis.html" target="_blank"><button class="botao">Investigar</button></a>
             </div>
         </div>
     </div>
