--- a/fase2armando.html
+++ b/fase2armando.html
@@ -36,11 +36,13 @@
             </div>
     
             <div class="div-botao">
-                <button class="botao">Responder</button>
+                <button onclick= "responder()" class="botao">Responder</button>
             </div>
     </div>
     
 
     </div>
 </body>
+
+<script type="text/javascript" src="fase2armando.js"></script>
 </html>
