--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
         <div class="principal">
             <div class="div-imagens">
-                <img src="./img/armando.png" class ="img-personagem" alt="Imagem personagem Armando">
+                <a href="armando.html" target="_blank"><img src="./img/armando.png" class ="img-personagem" alt="Imagem personagem Armando"></a>
                 <span>Armando</span>
             </div>
 
             <div class="div-imagens">
-                <img src="./img/denis.png" class ="img-personagem" alt="Imagem personagem Denis">
+                <a href="denis.html" target="_blank"><img src="./img/denis.png" class ="img-personagem" alt="Imagem personagem Denis"></a>
                 <span>Denis</span>
             </div>
 
             <div class="div-imagens">
-                <img src="./img/paula-modificada.png" class ="img-personagem" alt="Imagem personagem Paula">
+                <a href="paula.html" target="_blank"><img src="./img/paula-modificada.png" class ="img-personagem" alt="Imagem personagem Paula"></a>
                 <span>Paula</span>
             </div>
         </div>
