--- a/paula.html
+++ b/paula.html
@@ -28,7 +28,7 @@
                 </p>
             </div>
             <div class="div-botao">
-                <button class="botao">Começar</button>
+                <a href="fase1paula.html" target="_blank"><button class="botao">Começar</button></a>
             </div>
         </div>
     </div>
