--- a/fase1paula.html
+++ b/fase1paula.html
@@ -34,11 +34,12 @@
             </div>
     
             <div class="div-botao">
-                <button class="botao">Responder</button>
+                <button onclick= "responder()" class="botao">Responder</button>
             </div>
     </div>
     
 
     </div>
 </body>
+<script type="text/javascript" src="fase1paula.js"></script>
 </html>
