--- a/fase3armando.html
+++ b/fase3armando.html
@@ -35,11 +35,12 @@
             </div>
     
             <div class="div-botao">
-                <button class="botao">Responder</button>
+                <button onclick= "responder()" class="botao">Responder</button>
             </div>
     </div>
     
 
     </div>
 </body>
+<script type="text/javascript" src="fase3armando.js"></script>
 </html>
