--- a/gameover2denis.html
+++ b/gameover2denis.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="div-descricao">
-                <p class="p-descricao">Ela não usaria a janela, é muito óbvio e ela poderia ser vista.</p>
+                <p class="p-descricao">Afastar as pessoas parece não ser uma boa ideia, uma vez que são pessoas moradoras da região próximo ao museu e podem ter informações que irão facilitar na investigação.</p>
             </div>
 
             <div class="div-icon">
