--- a/vocevenceuarmando.html
+++ b/vocevenceuarmando.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="div-botao">
-                <button class="botao">Recomeçar o jogo</button>
+                <a href="index.html" target="_blank"><button class="botao">Recomeçar o jogo</button></a>
             </div>
 
         </div>
