Jogo aparentemente finalizado, ajustar o media somente

--- a/denis.html
+++ b/denis.html
@@ -24,10 +24,14 @@
                 </p>
             </div>
             <div class="div-botao">
-                <a href="fase1denis.html" target="_blank"><button class="botao">Investigar</button></a>
+                <a href="fase1denis.html"><button class="botao">Investigar</button></a>
             </div>
         </div>
     </div>
+
+    <footer>
+        <p class="p-footer">&copy; Copyright 2021 - Rafaela Dias - Resilia</p>
+    </footer>
     
 </body>
 </html>
