--- a/fase1denis.html
+++ b/fase1denis.html
@@ -36,10 +36,12 @@
             <div class="div-botao">
                 <button onclick= "responder()" class="botao">Responder</button>
             </div>
+        </div>
     </div>
-    
 
-    </div>
+    <footer>
+        <p class="p-footer">&copy; Copyright 2021 - Rafaela Dias - Resilia</p>
+    </footer>
 </body>
 <script type="text/javascript" src="fase1denis.js"></script>
 </html>
