--- a/gameover1armando.html
+++ b/gameover1armando.html
@@ -28,11 +28,15 @@
             </div>
 
             <div class="div-botao">
-                <a href="./index.html" target="_blank"><button class="botao">Recomeçar o jogo</button></a>
+                <a href="./index.html"><button class="botao">Recomeçar o jogo</button></a>
             </div>
 
         </div>
     </div>
+
+    <footer>
+        <p class="p-footer">&copy; Copyright 2021 - Rafaela Dias - Resilia</p>
+    </footer>
     
 </body>
 </html>
