--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="div-imagens">
-                <a href="paula.html" target="_blank"><img src="./img/paula-modificada.png" class ="img-personagem" alt="Imagem personagem Paula"></a>
+                <a href="paula.html"><img src="./img/paula-modificada.png" class ="img-personagem" alt="Imagem personagem Paula"></a>
                 <span>Paula</span>
             </div>
         </div>
