--- a/paula.html
+++ b/paula.html
@@ -28,10 +28,14 @@
                 </p>
             </div>
             <div class="div-botao">
-                <a href="fase1paula.html" target="_blank"><button class="botao">Começar</button></a>
+                <a href="fase1paula.html"><button class="botao">Começar</button></a>
             </div>
         </div>
     </div>
-    
+
+    <footer>
+        <p class="p-footer">&copy; Copyright 2021 - Rafaela Dias - Resilia</p>
+    </footer>
+
 </body>
 </html>
