--- a/vocevenceudenis.html
+++ b/vocevenceudenis.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roubo no Museu</title>
-    <link rel="stylesheet" href="gameover.css">
+    <link rel="stylesheet" href="vocevenceu.css">
 </head>
 <body>
     <div class="div-principal">
@@ -15,19 +15,19 @@
 
         <div class="div-container">
             <div class="div-h1">
-                <h1 class="h1-gameover">GAME OVER</h1>
+                <h1 class="h1-venceu">VOCÊ GANHOU!!!</h1>
             </div>
 
             <div class="div-descricao">
-                <p class="p-descricao">Ao tentar arrombar a janela o alarme tocou e Paula foi pega.</p>
+                <p class="p-descricao">Parabéns você pegou a criminosa, ela ainda estava do outro lado da porta eletrônica e tentando trancá-la usando seu notebook, mas não deu tempo e ela foi pega.</p>
             </div>
 
             <div class="div-icon">
-                <img src="./img/vector-gameover.png" class="img-gameover"alt=" Imagem Game Over">
+                <img src="./img/icon-medalha.png" class="img-medalha"alt=" Imagem Medalha">
             </div>
 
             <div class="div-botao">
-                <a href="./index.html"><button class="botao">Recomeçar o jogo</button></a>
+                <a href="index.html"><button class="botao">Recomeçar o jogo</button></a>
             </div>
 
         </div>
