--- a/armando.html
+++ b/armando.html
@@ -28,10 +28,15 @@
                 </p>
             </div>
             <div class="div-botao">
-                <a href="fase1armando.html" target="_blank"><button class="botao">Investigar</button></a>
+                <a href="fase1armando.html"><button class="botao">Investigar</button></a>
             </div>
         </div>
     </div>
+
+    <footer>
+        <p class="p-footer">&copy; Copyright 2021 - Rafaela Dias - Resilia</p>
+    </footer>
+
     
 </body>
 </html>
