--- a/fase1armando.html
+++ b/fase1armando.html
@@ -38,10 +38,11 @@
             <div class="div-botao">
                 <button onclick="responder()" class="botao">Responder</button>
             </div>
+        </div>
     </div>
-    
-
-    </div>
+    <footer>
+        <p class="p-footer">&copy; Copyright 2021 - Rafaela Dias - Resilia</p>
+    </footer>
 </body>
 <script type="text/javascript" src="fase1armando.js"></script>
 </html>
