--- a/fase3armando.html
+++ b/fase3armando.html
@@ -37,10 +37,10 @@
             <div class="div-botao">
                 <button onclick= "responder()" class="botao">Responder</button>
             </div>
+        </div>
     </div>
     
-
-    </div>
+    <footer><p class="p-footer">&copy; Copyright 2021 - Rafaela Dias - Resilia</p></footer>
 </body>
 <script type="text/javascript" src="fase3armando.js"></script>
 </html>
