--- a/gameover2denis.html
+++ b/gameover2denis.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="div-descricao">
-                <p class="p-descricao">Afastar as pessoas parece não ser uma boa ideia, uma vez que são pessoas moradoras da região próximo ao museu e podem ter informações que irão facilitar na investigação.</p>
+                <p class="p-descricao"> Não dar atenção aos fundos do museu levou Denis a seguir pistas erradas e o caso ficou parado.</p>
             </div>
 
             <div class="div-icon">
@@ -27,11 +27,15 @@
             </div>
 
             <div class="div-botao">
-                <a href="./index.html" target="_blank"><button class="botao">Recomeçar o jogo</button></a>
+                <a href="./index.html"><button class="botao">Recomeçar o jogo</button></a>
             </div>
 
         </div>
     </div>
+
+    <footer>
+        <p class="p-footer">&copy; Copyright 2021 - Rafaela Dias - Resilia</p>
+    </footer>
     
 </body>
 </html>
