--- a/fase3denis.html
+++ b/fase3denis.html
@@ -34,7 +34,7 @@
             </div>
     
             <div class="div-botao">
-                <button class="botao">Responder</button>
+                <button onclick= "responder()" class="botao">Responder</button>
             </div>
         </div>
     </div>
@@ -42,4 +42,6 @@
         <p class="p-footer">&copy; Copyright 2021 - Rafaela Dias - Resilia</p>
     </footer>
 </body>
+
+<script type="text/javascript" src="fase3denis.js"></script>
 </html>
