Retirei o _blank da página inicial

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
         <div class="principal">
             <div class="div-imagens">
-                <a href="armando.html" target="_blank"><img src="./img/armando.png" class ="img-personagem" alt="Imagem personagem Armando"></a>
+                <a href="armando.html"><img src="./img/armando.png" class ="img-personagem" alt="Imagem personagem Armando"></a>
                 <span>Armando</span>
             </div>
 
             <div class="div-imagens">
-                <a href="denis.html" target="_blank"><img src="./img/denis.png" class ="img-personagem" alt="Imagem personagem Denis"></a>
+                <a href="denis.html"><img src="./img/denis.png" class ="img-personagem" alt="Imagem personagem Denis"></a>
                 <span>Denis</span>
             </div>
 
